fix(core): update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+.nogit/
+
+# artifacts
+coverage/
+public/
+pages/
+
+# installs
 node_modules/
-.settings/
-.idea/
+
+# caches
+.yarn/
+.cache/
+.rpt2_cache
+
+# builds
+dist/
+dist_*/
+
+# custom
